# findname

./: README.md  findfile.sln
findfile/: CMakeLists.txt  FindFile.cpp  FindFile.h  findfile.vcxproj  findfile.vcxproj.filters  runlib.bat
findfile/Debug/findfile.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
findingfile/: CMakeLists.txt  Makefile  findingfile.cpp  findingfile.vcxproj  findingfile.vcxproj.filters  run.bat
findingfile/Debug/: findingfile.exe.recipe  findingfile.ilk  vc142.idb
findingfile/Debug/findingfile.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  findingfile.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
